<resources>
    <string name="app_name">Allah Water Ripple LWP</string>
    <string name="app_namenospace">allahwallpapers</string>
    <string name="lwp_name">Allah Ripple LWP</string>
    <string-array name="ripple_size">
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
    </string-array>
    <string-array name="ripple_size_value">
        <item>small</item>
        <item>medium</item>
        <item>large</item>
    </string-array>
    <string-array name="ripple_duration">
        <item>Slow</item>
        <item>Medium</item>
        <item>Fast</item>
    </string-array>
    <string-array name="ripple_duration_value">
        <item>slow</item>
        <item>medium</item>
        <item>fast</item>
    </string-array>
    <string-array name="ripple_image">
        <item>Allah 1</item>
        <item>Allah 2</item>
        <item>Allah 3</item>
    </string-array>
    <string-array name="ripple_image_value">
        <item>Allah 1</item>
        <item>Allah 2</item>
        <item>Allah 3</item>
    </string-array>
    <string name="txt1">How to Set the wallpaper manually</string>
    <string name="txt2">Open LWP</string>
    <string name="txt3">How to Set the wallpaper</string>
    <string name="txt4"> Setting -> display  -> Wallpaper  -> Home screen -> live Wallpaper  ->  allah Water Ripple LWP</string>
    <string name="txtrate1">\n If you like this application Please rating , rating help me to develop more Islamic Application \n </string>
    <string name="txtrate2">Rate this app</string>
    <string name="txtrate3">Later</string>
    <string name="txtrate4">No, Thanks</string>
    <string name="txtrate5">Rate now</string>
    <string name="txtrate6">Simultaneously press two times the back button to exit</string>
    <string name="txt5">Enable Sound</string>
    <string name="txt6">Select This Option For Sweet Sound Of Water Drop On Screen Touch</string>
    <string name="txt7">Ripple Size</string>
    <string name="txt8">Change Size Of Ripples</string>
    <string name="txt9">Ripple Speed</string>
    <string name="txt10">Change Speed Of Ripples</string>
    <string name="txt11">Sound</string>
    <string name="txt12">Ripple Settings</string>
    <string name="txt13">Recommendations</string>
    <string name="txt14">please Rate us</string>
    <string name="ratingapp">Rating This Application</string>
    <string name="other">My Other Wallpaper in the store</string>
    <string name="txtGallery">Allah Wallpaper gallery</string>
    <string name="gallery"></string>
    <string name="SetWall">Wallpaper Preview</string>
    <string name="NoConnection">No internet connection</string>
    <string name="setSwallSucess">Successfully set as wallpaper</string>
    <string name="setSwallNotSucess">Try again, Failed to set as wallpaper</string>
    <string name="otherwallll">1000 Wallpapers</string>
    <string name="detail.snack.save.success">Successfully saved wallpaper</string>
    <string name="detail.snack.save.failure">Try again, Failed to save wallpaper</string>
    <string name="detail.snack.set.success">Successfully set as wallpaper</string>
    <string name="detail.snack.set.failure">Try again, Failed to set as wallpaper</string>
    <string name="detail.snack.button.not_ready">Try again, The resource is not ready to process</string>
    <string name="menu.detail.oneclickwallpaper">Set As Wallpaper</string>
    <string name="menu.detail.wall">Fast Crop And Set</string>
    <string name="menu.detail.chooserwall">Open With Wallpaper Application</string>
    <string name="menu.detail.gallery">Save to gallery</string>
    <string name="menu.detail.share.inst">Share with insta</string>
    <string name="menu.detail.share.fb">Share with FB</string>
    <string name="menu.detail.share.all">Share</string>
    <string name="menu.detail.share.ripple">Use as ripple LWP</string>
    <string name="title_activity_tabbed_gallery">TabbedGalleryActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="catalog_title">Islamic Wallpapers</string>
    <string name="catalog_download">Download Wallpapers</string>
    <string name="catalog_loading">Loading.....</string>
    <string name="catalog_New">New</string>
    <string name="catalog_All">All</string>
    <string name="catalog_Popular">Popular</string>
    <string name="catalog_Category">Cat</string>
    <string name="catalog_LWP">LWP</string>
    <string name="catalog_Lab">Lab</string>
    <string name="appNotInstalled">Application Not installed</string>
    <string name="setAs">Set As</string>
    <string name="openGallery">Gallery</string>
    <string name="openCamera">Camera</string>
    <string name="cardframetitle">Wallpapers Frame</string>
    <string name="cardframedesc">Choose one picture and one frame and Create your wallpapers</string>
    <string name="cardStickerstitle">Stikers and Text</string>
    <string name="cardStickersdesc">Write on your photos and add stickers, frames, filters and other stuff</string>
    <string name="ShareUsing">Share image using</string>
    <string name="openGalleryLong">Open Image Gallery</string>
    <string name="savepermissiondesc">You need to allow access to Storage to save Picture</string>
    <string name="permissionok">Yes</string>
    <string name="permissionnon">No</string>
    <string name="lwp_author">yassin Contributors</string>
    <string name="lwp_desc">Tunis Sfax Developer</string>
    <string name="nameofallah">Name Of Allah in the sky LWP</string>
    <string name="setSkyboxLwp">Open Lwp</string>
    <string name="DescSkyboxLwp">99 Name Of Allah With 360 view</string>
    <string name="TitleSkyboxLwp">Name Of Allah</string>
    <string name="title_activity_choose_ripple_lwp">ChooseRippleLwpActivity</string>
    <string name="DescRippleLwp">You can choose one picture and set the water ripple animation</string>
    <string name="TitleRippleLwp">Water Ripple</string>
    <string name="otherMethodRippleTitle">Other Method</string>
    <string name="otherMethodRippleDesc">Open wallpaper from gallery and click to Use as ripple lwp button</string>
    <string name="FirstMethodRippleTitle">Fast Mode</string>
    <string name="FirstMethodRippleDesc">Choose one picture and click To the buttom below to open LWP</string>
    <string name="TitleDouaLwp">Doua LWP</string>
    <string name="DescDouaLwp">Doua Changer over choosed background</string>
    <string name="DouaLwpTitle">Choose Background</string>
    <string name="DouaLwpProgressDesc">Doua LWP Resources</string>
    <string name="DouaLwpDownloadCompleted">Completed</string>
    <string name="main_menu_scheduler_status">Current Status: %1$s</string>
    <string name="scheduler_new_days_title">Change Wallpaper every :</string>
    <string name="TitleActionBarTimerLwpAdded">Saved Wallpapers</string>
    <string name="TitleTimerLwp">Timer LWP</string>
    <string name="DescTimerLwp">The Lwp allows you to change your screen wallpaper on a timed basis</string>
    <string name="AddWallpaper">Add New</string>
    <string name="ListWallpaper">Favourites</string>
    <string name="TimerActivityDesc">Add 4 Wallpapers and configure the timer finally activate the service, the application will change the background when it\'s necessary</string>
    <string name="TimerActivityHowToUse">How It Work ?</string>
    <string name="onehoure">1 houre</string>
    <string name="sixhoure">6 houres</string>
    <string name="douzeoure">12 houres</string>
    <string name="oneday">1 day</string>
    <string name="onswitch">On</string>
    <string name="offswitch">Off</string>
    <string name="timerWallpaper">Timer Wallpaper</string>
    <string name="serviceis">Service is</string>
    <string name="addwalltitle">Add Wallpapers</string>
    <string name="addwalldesc">You need to add 4 Wallpapers Minimum</string>
    <string name="addwallok">Add</string>
    <string name="addwallcancel">Cancel</string>
    <string name="activeservice">Active</string>
    <string name="closeservice">Close</string>
    <string name="timerWallpaperNotForget">do not forget to disable the service if you use any other live wallpapers</string>
    <string name="titleBasmala">Basmala Lock</string>
    <string name="toastnosound">Without Sound</string>
    <string name="toastwithsound">With Sound</string>
    <string name="toastsanspicture">Without Picture  </string>
    <string name="toastwithpicture">With Picture</string>
    <string name="notifbasmallahactive">Basmallah Active</string>
    <string name="prefPicture">Show basmallah Picture </string>
    <string name="prefSound">Play basmallah Sound</string>
    <string name="defaultText">Choose Picture</string>
    <string name="select_Category">Choose Picture</string>
    <string name="prefAleatoire">Random picture</string>
    <string name="settingtxt">Setting</string>
    <string name="currentPicutre">Current Picture</string>
    <string name="prefnbopentoshow">Show after X unlock</string>
    <string name="nbunlockinfo">Nb x how you lock and unlock phone to show</string>
    <string name="openBasmalaTitle">Basmala Unlocking</string>
    <string name="openBasmalaDesc">Play Basmala when you unlock your phone</string>
    <string name="openBasmala">Open</string>
    <string name="openBasmalaNeedAddPicture">You need to choose picture</string>
    <string name="needallowpermission">You need to allow permission</string>
    <string name="timeShort">Short</string>
    <string name="timeMeduim">Meduim</string>
    <string name="timeFast">Fast</string>
    <string name="timeTurbo">Turbo</string>
    <string name="serviceOn">Service ON</string>
    <string name="serviceOff">Service Off</string>
    <string name="basmalapicturegallery">Picture</string>
    <string name="activesbasmalah">Active</string>
    <string name="closesebasmalae">Close</string>
    <string name="imageChnaged">Image changer</string>
    <string name="sizeFullscreen">Full</string>
    <string name="sizeBig">Big</string>
    <string name="sizeMeduim">Meduim</string>
    <string name="sizeSmall">Small</string>
    <string name="playbasmalaunlocktitle">Play when you unlock phone</string>
    <string name="colortxt">Color</string>
    <string name="sizetxt">Size</string>
    <string name="choosecolor">Choose color</string>
    <string name="btnok">Ok</string>
    <string name="btncancel">Cancel</string>
    <string name="speedInfoFast">The speed Is Fast in preview mode</string>
    <string name="txtspeed">Speed</string>
    <string name="downloadterminated">Download Completed successful</string>
    <string name="txtcompleted">Completed</string>
    <string name="Writingtxt">Writing Color</string>
    <string name="douatitle1">Download Live wallpaper resources</string>
    <string name="douatitle2">Waiting Download Resource</string>
    <string name="nofiletimer">You need to add 4 or more picture</string>
    <string name="timeron">Auto changing background is Working</string>
    <string name="nameofallah2dtitle">Name Of Allah 2D</string>
    <string name="nameofallah2ddesc">Choose background and writing color and enjoy with new animated wallpapers</string>
    <string name="textfont">Font Style</string>
    <string name="sizeTexteNameofallah">Text size</string>
    <string name="notchanger">New Wallpaper take effect after touchin screen 3 times, If you do not see the difference please try again </string>
    <string name="stickersHelpTitleResize"></string>
    <string name="stickersHelpDesc1Resize"></string>
    <string name="stickersHelpDesc2Resize"></string>
    <string name="stickersHelpDesc3Resize"></string>
    <string name="stickersHelpDesc4Resize"></string>
    <string name="stickersHelpTitleAddText"></string>
    <string name="opencamera"> From Camera </string>
    <string name="opengellery"> From Gallery </string>
    <string name="openweb"> App Gallery </string>
</resources>