<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/parentlayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#F3F3F3"
    android:orientation="vertical"
    android:paddingTop="5dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:text="Scroll Up"
            android:textColor="@color/primary_dark"
            android:textSize="20dp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            app:srcCompat="@mipmap/ic_scroll_up" />
    </RelativeLayout>

    <Button
        android:id="@+id/open_camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"
        android:background="@android:color/transparent"
        android:drawableLeft="@mipmap/ic_camera"
        android:drawablePadding="10dp"
        android:text="@string/opencamera"
        android:textColor="@color/primary_dark" />

    <Button
        android:id="@+id/open_gallery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"
        android:background="@android:color/transparent"
        android:drawableLeft="@mipmap/ic_gallery"
        android:drawablePadding="10dp"
        android:text="@string/opengellery"
        android:textAllCaps="false"
        android:textColor="@color/primary_dark" />

    <Button
        android:id="@+id/open_web"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"

        android:background="@android:color/transparent"
        android:drawableLeft="@mipmap/ic_gallery_open"
        android:drawablePadding="10dp"
        android:text="@string/openweb"
        android:textColor="@color/primary_dark" />
</LinearLayout>