<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:ignore="MissingDefaultResource">

    <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/cardViewStickers"
        style="@style/Material_Card_View"
        card_view:cardCornerRadius="2dp"
        card_view:cardElevation="4dp">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#ecf0f1"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageStikers"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:contentDescription="@null"
                android:minWidth="100dp"
                android:scaleType="fitXY" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/titleStckers"
                        style="@style/Material_Card_Title"
                        android:text="@string/cardStickerstitle"
                        tools:text="@string/cardStickerstitle" />

                    <TextView
                        android:id="@+id/subtitleStickers"
                        style="@style/Material_Card_Subtitle_16dp"
                        android:text="@string/cardStickersdesc"
                        tools:text="@string/cardStickersdesc" />
                </LinearLayout>

                <View xmlns:android="http://schemas.android.com/apk/res/android"
                    android:id="@+id/dividerStickers"
                    android:layout_width="fill_parent"
                    android:layout_height="1px"
                    android:background="@color/divider_grey"
                    android:visibility="invisible" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:orientation="horizontal"
                    android:paddingLeft="8dp">

                    <TextView
                        android:id="@+id/button_open"
                        style="@style/Material_Action"
                        android:layout_gravity="bottom"
                        android:text="@string/openGallery"
                        android:textColor="@color/primary"
                        tools:text="@string/openGallery" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>
